# PlatformWithDashboards

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  coverage_cicd.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run_https.bat  script_for_transer_dependencies_to_poetry.py
.github/workflows/: django.yml
PlatformWithDashboards/: .gitignore  .pylintrc  LICENSE  README.md  celery.py  celery_app.py  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
PlatformWithDashboards/.github/workflows/: django.yml
PlatformWithDashboards/PlatformWithDashboards/: asgi.py  urls.py
polls/: models.py  tests.py
polls/migrations/: 0001_initial.py
polls/tests/: test_views.py
users/: models.py
users/migrations/: 0001_initial.py
