[project]
name = "platformwithdashboards"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Sezen",email = "sezen.egor@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "celery (==5.5.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"

