[project]
name = "platformwithdashboards"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Sezen",email = "sezen.egor@mail.ru"}
]
packages = [
    { include = "PlatformWithDashboard" }
]
readme = "README.md"
requires-python = "^3.11"

dependencies = [
    "django==5.2.3",
    "celery==5.5.2",
    "coverage==7.8.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "pre-commit==4.2.0",
    "idna==3.10",
    "requests==2.32.3",
    "sqlparse==0.5.3",
    "urllib3==2.4.0",
    "redis==6.1.0",
    "pytest-django (>=4.11.1,<5.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"
pytest = "^8.4.0"
pytest-django = "^4.11.1"
pre-commit = "^4.2.0"
pylint-django = "^2.6.1"
django="5.2.3"
django-extensions = "^4.1"

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = ["PlatformWithDashboards", "polls"]
skip_gitignore = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
